--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,6 +8,7 @@
     <fragment
         android:id="@+id/nav_visicom"
         android:name="com.taxi.easy.ua.ui.visicom.VisicomFragment"
+
         tools:layout="@layout/fragment_visicom" />
     <fragment
         android:id="@+id/nav_home"
@@ -24,6 +25,7 @@
 <!--        android:name="com.taxi.easy.ua.ui.gallery.GalleryFragment"-->
 <!--        android:label="@string/menu_gallery"-->
 <!--        tools:layout="@layout/fragment_gallery" />-->
+
     <fragment
         android:id="@+id/nav_uid"
         android:name="com.taxi.easy.ua.ui.history.HistoryFragment"
@@ -34,6 +36,7 @@
         android:name="com.taxi.easy.ua.ui.bonus.BonusFragment"
         android:label="@string/my_bonus_menu"
         tools:layout="@layout/fragment_bonus" />
+
     <fragment
         android:id="@+id/nav_card"
         android:name="com.taxi.easy.ua.ui.card.CardFragment"
@@ -43,18 +46,20 @@
     <fragment
         android:id="@+id/nav_about"
         android:name="com.taxi.easy.ua.ui.about.AboutFragment"
-        android:label="@string/menu_about"
+        android:label="@string/conf"
         tools:layout="@layout/fragment_about" />
     <fragment
         android:id="@+id/nav_author"
         android:name="com.taxi.easy.ua.ui.author.AuthorFragment"
         android:label="@string/author_about"
         tools:layout="@layout/fragment_about" />
+
     <fragment
         android:id="@+id/nav_account"
         android:name="com.taxi.easy.ua.ui.account.AccountFragment"
         android:label="@string/account_menu"
         tools:layout="@layout/fragment_account" />
+
     <fragment
         android:id="@+id/nav_finish_separate"
         android:name="com.taxi.easy.ua.ui.finish.fragm.FinishSeparateFragment"
@@ -72,11 +77,23 @@
         android:name="com.taxi.easy.ua.ui.visicom.visicom_search.VisicomSearchFragment"
         android:label="@string/search_address"
         tools:layout="@layout/fragment_visicom_search" />
+
     <fragment
         android:id="@+id/nav_cacheOrder"
         android:name="com.taxi.easy.ua.ui.finish.fragm.CacheOrderFragment"
         android:label="@string/your_order"
         tools:layout="@layout/fragment_cache_order" />
 
+    <fragment
+        android:id="@+id/nav_map"
+        android:name="com.taxi.easy.ua.ui.open_map.OpenStreetMapFragment"
+        android:label="@string/search_address"
+        tools:layout="@layout/fragment_openstreetmap" />
+
+    <fragment
+        android:id="@+id/nav_city"
+        android:name="com.taxi.easy.ua.ui.cities.check.CityCheckFragment"
+        android:label="@string/search_address"
+        tools:layout="@layout/fragment_city_check" />
 
 </navigation>
