--- a/app/src/main/res/layout/fragment_openstreetmap.xml
+++ b/app/src/main/res/layout/fragment_openstreetmap.xml
@@ -16,34 +16,49 @@
 
     </org.osmdroid.views.MapView>
 
-
-    <ImageButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/btn_accents"
-        android:scaleType="centerInside"
-        android:src="@drawable/arrow_back_fill0_wght400_grad0_opsz24"
-
-        android:contentDescription="@string/make_rout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-
-        tools:ignore="MissingConstraints" />
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="409sp"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/center_marker"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:contentDescription="center marker"
+        android:src="@drawable/marker_green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5"
+        tools:ignore="MissingConstraints"  />
+
+    <ImageButton
+        android:id="@+id/fab"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/btn_accents"
+        android:contentDescription="@string/make_rout"
+        android:scaleType="centerInside"
+
+        android:src="@drawable/arrow_back_fill0_wght400_grad0_opsz24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        tools:ignore="MissingConstraints" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
         android:indeterminateTint="@android:color/holo_green_light"
         android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5"
         tools:ignore="MissingConstraints" />
 
     <Switch
@@ -51,48 +66,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="GPS"
-        android:layout_marginBottom="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/fab_open_marker"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_open_map"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginBottom="10sp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:contentDescription="@string/open_maps"
         app:layout_constraintBottom_toTopOf="@+id/fab_call"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.954"
-        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/baseline_check_black_24dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_open_marker"
+        android:id="@+id/fab_call"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginBottom="10sp"
-        android:contentDescription="@string/open_maps"
-        app:layout_constraintBottom_toTopOf="@+id/fab_open_map"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.954"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_set_as" />
-
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_call"
-        android:layout_width="52dp"
-        android:layout_height="139dp"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:contentDescription="@string/call_admin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.954"
-        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@android:drawable/stat_sys_phone_call_forward" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
