--- a/app/src/main/res/layout/fragment_openstreetmap.xml
+++ b/app/src/main/res/layout/fragment_openstreetmap.xml
@@ -23,6 +23,7 @@
         android:layout_gravity="center"
         android:contentDescription="center marker"
         android:src="@drawable/marker_green"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -33,9 +34,9 @@
 
     <ImageButton
         android:id="@+id/fab"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="24dp"
+         android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/btn_accents"
         android:contentDescription="@string/make_rout"
@@ -66,6 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="GPS"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="UseSwitchCompatOrMaterialXml" />
