--- a/app/src/main/res/layout/fragment_visicom_options.xml
+++ b/app/src/main/res/layout/fragment_visicom_options.xml
@@ -9,10 +9,10 @@
     <!-- Кнопка "Назад" в верхнем левом углу -->
     <ImageButton
         android:id="@+id/okButton"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/btn_accents"
         android:contentDescription="@string/make_rout"
         android:scaleType="centerInside"
@@ -37,17 +37,17 @@
     <!-- Выпадающий список тарифов -->
 
     <!-- Текст "Обслуживание" -->
+
     <Spinner
         android:id="@+id/list_tariff"
-        android:layout_width="215dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="230dp"
+        android:layout_height="33dp"
         android:background="@null"
         android:popupBackground="@color/background_color_new"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintEnd_toEndOf="@+id/komenterinp"
         app:layout_constraintTop_toTopOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.2"
         app:layout_constraintWidth_max="208dp"
         app:layout_constraintWidth_percent="0.5" />
 
@@ -111,32 +111,34 @@
         android:textColor="#D9D9D9"
         android:textSize="@dimen/textView_textSize"
         app:layout_constraintBottom_toBottomOf="@+id/tv_selected_time"
-        app:layout_constraintEnd_toEndOf="@+id/list_tariff"
+        app:layout_constraintEnd_toEndOf="@+id/komenterinp"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/tv_selected_time"
         app:layout_constraintTop_toTopOf="@+id/tv_selected_time"
         app:layout_constraintVertical_bias="0.0" />
 
+    <!-- Поле комментария -->
+
+    <!-- Кнопка "Минус" -->
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="131dp"
-        android:layout_height="45dp"
+        android:layout_width="wrap_content"
+        android:layout_height="24dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:fontFamily="@font/regular"
         android:text="@string/disc_text"
         android:textColor="#D9D9D9"
         android:textSize="@dimen/textView_textSize"
+        app:layout_constraintBottom_toBottomOf="@+id/discinp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toTopOf="@+id/discinp" />
 
-    <!-- Поле комментария -->
     <EditText
         android:id="@+id/komenterinp"
         android:layout_width="0dp"
         android:layout_height="43dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/input"
         android:ems="10"
@@ -148,31 +150,38 @@
         android:textColor="#D9D9D9"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-    <!-- Кнопка "Минус" -->
+    <!-- Поле ввода скидки -->
+
+    <!-- Символ процента -->
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_minus"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginStart="8dp"
         android:backgroundTint="@color/white"
         android:gravity="center"
         android:text="-"
         android:textColor="@color/black"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@+id/discinp"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="@+id/discinp" />
+        app:layout_constraintStart_toStartOf="@+id/tv_selected_time"
+        app:layout_constraintTop_toTopOf="@+id/discinp"
+        app:layout_constraintVertical_bias="0.0" />
 
-    <!-- Поле ввода скидки -->
+    <!-- Кнопка "Плюс" -->
+
+    <!-- Заголовок списка услуг -->
+
     <EditText
         android:id="@+id/discinp"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="12dp"
+
+        android:layout_marginTop="16dp"
         android:background="@drawable/input"
         android:ems="10"
         android:fontFamily="@font/regular"
@@ -181,43 +190,27 @@
         android:textAllCaps="true"
         android:textColor="#D9D9D9"
         android:textSize="@dimen/textView_textSize"
-        app:layout_constraintWidth_percent="0.15"
-        app:layout_constraintWidth_max="60dp"
+        app:layout_constraintEnd_toStartOf="@+id/btn_plus"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/btn_minus"
-        app:layout_constraintTop_toBottomOf="@+id/tv_selected_time" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_selected_date"
+        app:layout_constraintWidth_max="60dp"
+        app:layout_constraintWidth_percent="0.15" />
 
-    <!-- Символ процента -->
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="19dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="12dp"
-        android:fontFamily="@font/regular"
-        android:text="%"
-        android:textAlignment="center"
-        android:textColor="#D9D9D9"
-        android:textSize="@dimen/textView_textSize"
-        app:layout_constraintStart_toEndOf="@+id/discinp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_selected_time" />
-
-    <!-- Кнопка "Плюс" -->
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_plus"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginStart="2dp"
         android:backgroundTint="@color/colorAccent"
         android:gravity="center"
         android:text="+"
         android:textColor="@color/black"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@+id/discinp"
-        app:layout_constraintEnd_toEndOf="@+id/tv_selected_date"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toTopOf="@+id/discinp" />
+        app:layout_constraintEnd_toEndOf="@+id/komenterinp"
+        app:layout_constraintTop_toTopOf="@+id/discinp"
+        app:layout_constraintVertical_bias="0.0" />
 
-    <!-- Заголовок списка услуг -->
     <TextView
         android:id="@+id/maintext"
         android:layout_width="wrap_content"
