--- a/app/src/main/res/layout/fragment_visicom_search.xml
+++ b/app/src/main/res/layout/fragment_visicom_search.xml
@@ -21,8 +21,9 @@
 
     <EditText
         android:id="@+id/textGeo"
-        android:layout_width="300dp"
+        android:layout_width="370dp"
         android:layout_height="wrap_content"
+        android:minHeight="40dp"
         android:layout_margin="8sp"
         android:layout_marginStart="14sp"
         android:background="@drawable/input"
@@ -33,6 +34,7 @@
         android:textColorHint="#ABD9D9D9"
 
         android:textSize="@dimen/textView_textSize"
+        app:layout_constraintEnd_toEndOf="@+id/btn_on_map"
         app:layout_constraintStart_toEndOf="@+id/num1"
         app:layout_constraintTop_toBottomOf="@+id/textfrom"
         tools:ignore="MissingConstraints" />
@@ -48,21 +50,8 @@
         android:background="@drawable/buttons"
         android:text="@string/change"
         android:textColor="#D9D9D9"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_on_map"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageButton
-        android:id="@+id/btn_clear_from"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:background="@drawable/buttons"
-        android:scaleType="centerInside"
-        android:src="@drawable/ic_clear_24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.118"
-        app:layout_constraintStart_toEndOf="@+id/textGeo"
-        app:layout_constraintTop_toBottomOf="@+id/btn_no" />
 
     <ImageButton
         android:id="@+id/btn_ok"
@@ -94,8 +83,9 @@
 
     <EditText
         android:id="@+id/text_to"
-        android:layout_width="300dp"
+        android:layout_width="370dp"
         android:layout_height="wrap_content"
+        android:minHeight="40dp"
         android:layout_margin="8sp"
         android:layout_marginStart="8sp"
         android:layout_marginTop="8sp"
@@ -106,6 +96,7 @@
         android:textColor="@color/white"
         android:textColorHint="#ABD9D9D9"
         android:textSize="@dimen/textView_textSize"
+        app:layout_constraintEnd_toEndOf="@+id/btn_on_map"
         app:layout_constraintStart_toEndOf="@+id/num2"
         app:layout_constraintTop_toBottomOf="@+id/textwhere" />
 
@@ -124,26 +115,12 @@
         app:layout_constraintTop_toBottomOf="@+id/text_to"
         tools:ignore="MissingConstraints" />
 
-    <ImageButton
-        android:id="@+id/btn_clear_to"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/buttons"
-        android:scaleType="centerInside"
-
-        android:src="@drawable/ic_clear_24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.118"
-        app:layout_constraintStart_toEndOf="@+id/text_to"
-        app:layout_constraintTop_toBottomOf="@+id/textwhere" />
-
     <TextView
         android:id="@+id/textfrom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24sp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/light"
         android:text="@string/from_text"
         android:textColor="#9DA0A8"
@@ -151,19 +128,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_on_map" />
 
+
     <TextView
         android:id="@+id/textwhere"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24sp"
 
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/light"
         android:text="@string/to_edit"
         android:textColor="#9DA0A8"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textGeoError" />
-
 
     <TextView
         android:id="@+id/textGeoError"
@@ -191,9 +169,9 @@
 
     <ImageButton
         android:id="@+id/btn_no"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+         android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/btn_accents"
         android:scaleType="centerInside"
@@ -208,13 +186,13 @@
 
         android:layout_margin="8sp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="12dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/buttons"
         android:fontFamily="@font/regular"
         android:text="@string/on_map"
         android:textAlignment="center"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toStartOf="@+id/change"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
