--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,14 +1,13 @@
 <resources>
 
-    <style name="Widget.Theme.TaxiEasyUaBack4App.ActionBar.Fullscreen" parent="Widget.AppCompat.ActionBar">
+    <style name="Widget.Theme.TaxiEasyUa.ActionBar.Fullscreen" parent="Widget.AppCompat.ActionBar">
         <item name="android:background">@color/black_overlay</item>
     </style>
 
-    <style name="Widget.Theme.TaxiEasyUaBack4App.ButtonBar.Fullscreen" parent="">
+    <style name="Widget.Theme.TaxiEasyUa.ButtonBar.Fullscreen" parent="">
         <item name="android:background">@color/black_overlay</item>
         <item name="android:buttonBarStyle">?android:attr/buttonBarStyle</item>
     </style>
-
     <style name="CircularImageView" parent="">
         <item name="shapeAppearanceOverlay">@style/ShapeAppearanceOverlay.Circular</item>
     </style>
@@ -17,5 +16,4 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
     </style>
-
 </resources>
